--- a/app/css/style.css
+++ b/app/css/style.css
@@ -36,35 +36,36 @@ h2 {
   background-color: black;
   border-color: black;
   margin-bottom: 0px;
+  border-radius: 0px;
 }
-/* line 32, ../../sass/style.scss */
+/* line 33, ../../sass/style.scss */
 .navbar .navbar-brand {
   color: lightgray;
   font-size: 2em;
 }
 
-/* line 39, ../../sass/style.scss */
+/* line 40, ../../sass/style.scss */
 .container {
   width: 100%;
   background-color: white;
   padding: 0px 0px 20px 0px !important;
   margin: 0px 0px 0px 0px !important;
 }
-@media only screen and (min-width: 1000px) {
-  /* line 39, ../../sass/style.scss */
+@media only screen and (min-width: 900px) {
+  /* line 40, ../../sass/style.scss */
   .container {
     padding: 0 0 100px 0 !important;
-    width: 1000px;
+    width: 900px;
     margin: 0 auto !important;
   }
 }
 
-/* line 52, ../../sass/style.scss */
+/* line 53, ../../sass/style.scss */
 .candidate-section {
   text-align: center;
   line-height: 100px;
 }
-/* line 56, ../../sass/style.scss */
+/* line 57, ../../sass/style.scss */
 .candidate-section .left-arrow {
   vertical-align: middle;
   display: inline-block;
@@ -72,22 +73,22 @@ h2 {
   font-size: 4.5em;
   padding-left: 10px;
 }
-/* line 64, ../../sass/style.scss */
+/* line 65, ../../sass/style.scss */
 .candidate-section .candidate-info {
   display: inline-block;
 }
-/* line 67, ../../sass/style.scss */
+/* line 68, ../../sass/style.scss */
 .candidate-section .candidate-info h1 {
   font-weight: bold;
   margin-bottom: 0;
   font-size: 2.5em;
 }
-/* line 73, ../../sass/style.scss */
+/* line 74, ../../sass/style.scss */
 .candidate-section .candidate-info h2 {
   margin-top: 0;
   font-weight: thin;
 }
-/* line 79, ../../sass/style.scss */
+/* line 80, ../../sass/style.scss */
 .candidate-section .right-arrow {
   display: inline-block;
   float: right;
@@ -95,12 +96,12 @@ h2 {
   padding-right: 10px;
 }
 
-/* line 87, ../../sass/style.scss */
+/* line 88, ../../sass/style.scss */
 .bills-name-section {
   text-align: center;
-  line-height: 100px;
+  line-height: 120px;
 }
-/* line 91, ../../sass/style.scss */
+/* line 92, ../../sass/style.scss */
 .bills-name-section .left-x {
   vertical-align: middle;
   display: inline-block;
@@ -108,16 +109,16 @@ h2 {
   font-size: 4em;
   padding-left: 10px;
 }
-/* line 99, ../../sass/style.scss */
+/* line 100, ../../sass/style.scss */
 .bills-name-section .bills-info {
   display: inline-block;
 }
-/* line 102, ../../sass/style.scss */
+/* line 103, ../../sass/style.scss */
 .bills-name-section .bills-info h1 {
   font-weight: bold;
   font-size: 2.5em;
 }
-/* line 108, ../../sass/style.scss */
+/* line 109, ../../sass/style.scss */
 .bills-name-section .right-x {
   display: inline-block;
   float: right;
@@ -125,100 +126,108 @@ h2 {
   padding-right: 10px;
 }
 
-/* line 116, ../../sass/style.scss */
+/* line 117, ../../sass/style.scss */
 .desktop-left-section {
   height: 100%;
   width: 100%;
 }
-@media only screen and (min-width: 1000px) {
-  /* line 116, ../../sass/style.scss */
+@media only screen and (min-width: 900px) {
+  /* line 117, ../../sass/style.scss */
   .desktop-left-section {
     float: left;
     width: 30%;
   }
 }
-/* line 125, ../../sass/style.scss */
+/* line 126, ../../sass/style.scss */
 .desktop-left-section .candidate-image {
   margin: auto;
   text-align: center;
   margin-bottom: 20px;
 }
-/* line 130, ../../sass/style.scss */
+/* line 131, ../../sass/style.scss */
 .desktop-left-section .candidate-image h1 {
   display: none;
 }
-@media only screen and (min-width: 1000px) {
-  /* line 125, ../../sass/style.scss */
+/* line 135, ../../sass/style.scss */
+.desktop-left-section .candidate-image img {
+  width: 30%;
+}
+@media only screen and (min-width: 900px) {
+  /* line 126, ../../sass/style.scss */
   .desktop-left-section .candidate-image {
     text-align: left;
   }
-  /* line 137, ../../sass/style.scss */
+  /* line 142, ../../sass/style.scss */
   .desktop-left-section .candidate-image h1 {
     display: block;
   }
+  /* line 146, ../../sass/style.scss */
+  .desktop-left-section .candidate-image img {
+    width: 80%;
+  }
 }
-/* line 143, ../../sass/style.scss */
+/* line 152, ../../sass/style.scss */
 .desktop-left-section .candidate-committees {
   display: none;
   margin-bottom: 20px;
 }
-@media only screen and (min-width: 1000px) {
-  /* line 143, ../../sass/style.scss */
+@media only screen and (min-width: 900px) {
+  /* line 152, ../../sass/style.scss */
   .desktop-left-section .candidate-committees {
     float: left;
     width: 80%;
     display: block;
   }
-  /* line 152, ../../sass/style.scss */
+  /* line 161, ../../sass/style.scss */
   .desktop-left-section .candidate-committees h1 {
     background-color: white;
   }
-  /* line 156, ../../sass/style.scss */
+  /* line 165, ../../sass/style.scss */
   .desktop-left-section .candidate-committees ul {
     padding-left: 15px;
     font-size: 1.5em;
     background-color: lightgray;
     line-height: 2em;
   }
-  /* line 163, ../../sass/style.scss */
+  /* line 172, ../../sass/style.scss */
   .desktop-left-section .candidate-committees li {
     list-style-type: none;
   }
 }
-/* line 169, ../../sass/style.scss */
+/* line 178, ../../sass/style.scss */
 .desktop-left-section .bill-description-desktop {
   display: none;
   margin-bottom: 20px;
 }
-@media only screen and (min-width: 1000px) {
-  /* line 169, ../../sass/style.scss */
+@media only screen and (min-width: 900px) {
+  /* line 178, ../../sass/style.scss */
   .desktop-left-section .bill-description-desktop {
     float: left;
     width: 80%;
     display: block;
   }
 }
-/* line 180, ../../sass/style.scss */
+/* line 189, ../../sass/style.scss */
 .desktop-left-section .bills-sponsored-section-desktop {
   width: 100%;
   display: none;
 }
-@media only screen and (min-width: 1000px) {
-  /* line 180, ../../sass/style.scss */
+@media only screen and (min-width: 900px) {
+  /* line 189, ../../sass/style.scss */
   .desktop-left-section .bills-sponsored-section-desktop {
     float: left;
     width: 80%;
     display: block;
   }
-  /* line 189, ../../sass/style.scss */
+  /* line 198, ../../sass/style.scss */
   .desktop-left-section .bills-sponsored-section-desktop h1 {
     background-color: white;
   }
-  /* line 193, ../../sass/style.scss */
+  /* line 202, ../../sass/style.scss */
   .desktop-left-section .bills-sponsored-section-desktop .bill-list {
     background-color: lightgray;
   }
-  /* line 196, ../../sass/style.scss */
+  /* line 205, ../../sass/style.scss */
   .desktop-left-section .bills-sponsored-section-desktop .bill-list .bill-item {
     font-size: 1.5em;
     border-bottom: 1px solid white;
@@ -227,207 +236,214 @@ h2 {
   }
 }
 
-/* line 209, ../../sass/style.scss */
+/* line 218, ../../sass/style.scss */
 .desktop-right-section {
   height: 100%;
   width: 100%;
 }
-@media only screen and (min-width: 1000px) {
-  /* line 209, ../../sass/style.scss */
+@media only screen and (min-width: 900px) {
+  /* line 218, ../../sass/style.scss */
   .desktop-right-section {
     display: inline-block;
     width: 70%;
   }
 }
-/* line 218, ../../sass/style.scss */
+/* line 227, ../../sass/style.scss */
 .desktop-right-section .campaign-contributions-section {
   text-align: center;
   background-color: lightgray;
   width: 100%;
   margin-bottom: 20px;
 }
-/* line 224, ../../sass/style.scss */
+/* line 233, ../../sass/style.scss */
 .desktop-right-section .campaign-contributions-section h1 {
   padding-top: 20px;
 }
-@media only screen and (min-width: 1000px) {
-  /* line 218, ../../sass/style.scss */
+@media only screen and (min-width: 900px) {
+  /* line 227, ../../sass/style.scss */
   .desktop-right-section .campaign-contributions-section {
     text-align: left;
   }
-  /* line 231, ../../sass/style.scss */
+  /* line 240, ../../sass/style.scss */
   .desktop-right-section .campaign-contributions-section h1 {
     background-color: white;
     padding-top: 0;
+    padding-bottom: 10px;
+    margin-bottom: 0;
   }
 }
-/* line 237, ../../sass/style.scss */
+/* line 249, ../../sass/style.scss */
 .desktop-right-section .campaign-contributions-section .contributions-graph {
-  background: url("http://placekitten.com/600/400");
+  background: url("http://i.stack.imgur.com/jj5Nf.png");
   background-repeat: no-repeat;
   background-size: 100% 100%;
   min-height: 400px;
 }
-/* line 246, ../../sass/style.scss */
+/* line 258, ../../sass/style.scss */
 .desktop-right-section .industry-influence-section {
   text-align: center;
   width: 100%;
 }
-/* line 250, ../../sass/style.scss */
+/* line 262, ../../sass/style.scss */
 .desktop-right-section .industry-influence-section h1 {
   padding-top: 20px;
 }
-@media only screen and (min-width: 1000px) {
-  /* line 246, ../../sass/style.scss */
+@media only screen and (min-width: 900px) {
+  /* line 258, ../../sass/style.scss */
   .desktop-right-section .industry-influence-section {
     text-align: left;
+    background-color: lightgray;
   }
-  /* line 257, ../../sass/style.scss */
+  /* line 270, ../../sass/style.scss */
   .desktop-right-section .industry-influence-section h1 {
     padding-top: 0;
+    background-color: white;
+    padding-bottom: 10px;
+    margin-bottom: 0;
   }
 }
-/* line 262, ../../sass/style.scss */
+/* line 278, ../../sass/style.scss */
 .desktop-right-section .industry-influence-section .influence-graph {
-  background: url("http://placekitten.com/600/401");
+  background: url("http://enterpriseprogrammer.files.wordpress.com/2013/01/sucessfactorspiechart.png");
   background-repeat: no-repeat;
   background-size: 100% 100%;
   min-height: 400px;
 }
-/* line 270, ../../sass/style.scss */
+/* line 286, ../../sass/style.scss */
 .desktop-right-section .bill-industry-influence-section {
   text-align: center;
   width: 100%;
   background-color: lightgray;
 }
-/* line 275, ../../sass/style.scss */
+/* line 291, ../../sass/style.scss */
 .desktop-right-section .bill-industry-influence-section h1 {
   padding-top: 20px;
 }
-@media only screen and (min-width: 1000px) {
-  /* line 270, ../../sass/style.scss */
+@media only screen and (min-width: 900px) {
+  /* line 286, ../../sass/style.scss */
   .desktop-right-section .bill-industry-influence-section {
     text-align: left;
   }
-  /* line 282, ../../sass/style.scss */
+  /* line 298, ../../sass/style.scss */
   .desktop-right-section .bill-industry-influence-section h1 {
     background-color: white;
     padding-top: 0;
   }
 }
-/* line 288, ../../sass/style.scss */
+/* line 304, ../../sass/style.scss */
 .desktop-right-section .bill-industry-influence-section .influence-graph {
   background: url("http://placekitten.com/600/401");
   background-repeat: no-repeat;
   background-size: 100% 100%;
   min-height: 400px;
 }
-/* line 296, ../../sass/style.scss */
+/* line 312, ../../sass/style.scss */
 .desktop-right-section .bill-industry-description {
   background-color: darkgray;
   padding: 30px;
   display: none;
 }
-@media only screen and (min-width: 1000px) {
-  /* line 296, ../../sass/style.scss */
+@media only screen and (min-width: 900px) {
+  /* line 312, ../../sass/style.scss */
   .desktop-right-section .bill-industry-description {
     display: block;
   }
 }
-/* line 306, ../../sass/style.scss */
+/* line 322, ../../sass/style.scss */
 .desktop-right-section .bill-description-mobile {
   width: 100%;
   padding: 30px;
 }
-@media only screen and (min-width: 1000px) {
-  /* line 306, ../../sass/style.scss */
+@media only screen and (min-width: 900px) {
+  /* line 322, ../../sass/style.scss */
   .desktop-right-section .bill-description-mobile {
     display: none;
   }
 }
-/* line 316, ../../sass/style.scss */
+/* line 332, ../../sass/style.scss */
 .desktop-right-section .bills-sponsored-section-mobile {
   background-color: lightgray;
   width: 100%;
 }
-/* line 320, ../../sass/style.scss */
+/* line 336, ../../sass/style.scss */
 .desktop-right-section .bills-sponsored-section-mobile h1 {
   text-align: center;
   padding-top: 20px;
 }
-/* line 325, ../../sass/style.scss */
+/* line 341, ../../sass/style.scss */
 .desktop-right-section .bills-sponsored-section-mobile .bill-list {
   background-color: lightgray;
 }
-/* line 328, ../../sass/style.scss */
+/* line 344, ../../sass/style.scss */
 .desktop-right-section .bills-sponsored-section-mobile .bill-list .bill-item {
   border-bottom: 1px solid white;
   border-top: 1px solid white;
   margin-top: 0px;
 }
-@media only screen and (min-width: 1000px) {
-  /* line 316, ../../sass/style.scss */
+@media only screen and (min-width: 900px) {
+  /* line 332, ../../sass/style.scss */
   .desktop-right-section .bills-sponsored-section-mobile {
     display: none;
   }
 }
-/* line 342, ../../sass/style.scss */
+/* line 358, ../../sass/style.scss */
 .desktop-right-section .candidate-list-section-mobile {
   background-color: lightgray;
   width: 100%;
 }
-/* line 346, ../../sass/style.scss */
+/* line 362, ../../sass/style.scss */
 .desktop-right-section .candidate-list-section-mobile h1 {
   text-align: center;
   padding-top: 20px;
 }
-/* line 351, ../../sass/style.scss */
+/* line 367, ../../sass/style.scss */
 .desktop-right-section .candidate-list-section-mobile .candidate-list {
   background-color: lightgray;
 }
-/* line 354, ../../sass/style.scss */
+/* line 370, ../../sass/style.scss */
 .desktop-right-section .candidate-list-section-mobile .candidate-list .candidate-item {
   border-bottom: 1px solid white;
   border-top: 1px solid white;
   margin-top: 0px;
 }
-@media only screen and (min-width: 1000px) {
-  /* line 342, ../../sass/style.scss */
+@media only screen and (min-width: 900px) {
+  /* line 358, ../../sass/style.scss */
   .desktop-right-section .candidate-list-section-mobile {
     display: none;
   }
 }
 
-/* line 369, ../../sass/style.scss */
+/* line 385, ../../sass/style.scss */
 .footer {
   color: lightgray;
   background-color: black;
+  height: 100%;
 }
-/* line 373, ../../sass/style.scss */
+/* line 390, ../../sass/style.scss */
 .footer ul {
   padding-top: 30px;
   text-align: center;
   font-size: 2em;
 }
-/* line 379, ../../sass/style.scss */
+/* line 396, ../../sass/style.scss */
 .footer li {
   display: inline;
   list-style-type: none;
 }
-/* line 384, ../../sass/style.scss */
+/* line 401, ../../sass/style.scss */
 .footer h2 {
   padding: 0 20px 0 20px;
 }
-/* line 388, ../../sass/style.scss */
+/* line 405, ../../sass/style.scss */
 .footer p {
   padding: 0 20px 20px 20px;
 }
-@media only screen and (min-width: 1000px) {
-  /* line 393, ../../sass/style.scss */
+@media only screen and (min-width: 900px) {
+  /* line 410, ../../sass/style.scss */
   .footer h2 {
     padding: 30px 100px 0 100px;
   }
-  /* line 397, ../../sass/style.scss */
+  /* line 414, ../../sass/style.scss */
   .footer p {
     padding: 0 100px 100px 100px;
   }
