--- a/sass/style.scss
+++ b/sass/style.scss
@@ -28,6 +28,7 @@ h2 {
     background-color: black;
     border-color: black;
     margin-bottom: 0px;
+    border-radius: 0px;
 
     .navbar-brand {
         color: lightgray;
@@ -42,9 +43,9 @@ h2 {
     padding: 0px 0px 20px 0px !important;
     margin: 0px 0px 0px 0px !important;
 
-    @media only screen and (min-width: 1000px) {
+    @media only screen and (min-width: 900px) {
         padding: 0 0 100px 0 !important;
-        width: 1000px;
+        width: 900px;
         margin: 0 auto !important;
     }
 }
@@ -86,7 +87,7 @@ h2 {
 
 .bills-name-section {
     text-align: center;
-    line-height: 100px;
+    line-height: 120px;
 
     .left-x {
         vertical-align: middle;
@@ -117,7 +118,7 @@ h2 {
     height: 100%;
     width: 100%;
 
-    @media only screen and (min-width: 1000px) {
+    @media only screen and (min-width: 900px) {
         float: left;
         width: 30%;
     }
@@ -131,11 +132,19 @@ h2 {
             display: none;;
         }
 
-        @media only screen and (min-width: 1000px) {
+        img {
+            width: 30%;
+        }
+
+        @media only screen and (min-width: 900px) {
             text-align: left;
 
             h1 {
                 display: block;
+            }
+
+            img {
+                width: 80%;
             }
         }
     }
@@ -144,7 +153,7 @@ h2 {
         display: none;
         margin-bottom: 20px;
 
-        @media only screen and (min-width: 1000px) {
+        @media only screen and (min-width: 900px) {
             float: left;
             width: 80%;
             display: block;
@@ -170,7 +179,7 @@ h2 {
         display: none;
         margin-bottom: 20px;
 
-        @media only screen and (min-width: 1000px) {
+        @media only screen and (min-width: 900px) {
             float: left;
             width: 80%;
             display: block;
@@ -181,7 +190,7 @@ h2 {
         width: 100%;
         display: none;
 
-        @media only screen and (min-width: 1000px) {
+        @media only screen and (min-width: 900px) {
             float: left;
             width: 80%;
             display: block;
@@ -210,7 +219,7 @@ h2 {
     height: 100%;
     width: 100%;
 
-    @media only screen and (min-width: 1000px) {
+    @media only screen and (min-width: 900px) {
         display: inline-block;
         width: 70%;
     }
@@ -225,17 +234,20 @@ h2 {
             padding-top: 20px;
         }
 
-        @media only screen and (min-width: 1000px) {
+        @media only screen and (min-width: 900px) {
             text-align: left;
             
             h1 {
                 background-color: white;
                 padding-top: 0;
+                padding-bottom: 10px;
+                margin-bottom: 0;
+
             }
         }
 
         .contributions-graph {
-            background: url("http://placekitten.com/600/400");
+            background: url("http://i.stack.imgur.com/jj5Nf.png");
             background-repeat: no-repeat;
             background-size: 100% 100%;
             min-height: 400px;
@@ -251,16 +263,20 @@ h2 {
             padding-top: 20px;
         }
 
-        @media only screen and (min-width: 1000px) {
+        @media only screen and (min-width: 900px) {
             text-align: left;
+            background-color: lightgray;
 
             h1 {
                 padding-top: 0;
+                background-color: white;
+                padding-bottom: 10px;
+                margin-bottom: 0;
             }
         }
 
         .influence-graph {
-            background: url("http://placekitten.com/600/401");
+            background: url("http://enterpriseprogrammer.files.wordpress.com/2013/01/sucessfactorspiechart.png");
             background-repeat: no-repeat;
             background-size: 100% 100%;
             min-height: 400px;
@@ -276,7 +292,7 @@ h2 {
             padding-top: 20px;
         }
 
-        @media only screen and (min-width: 1000px) {
+        @media only screen and (min-width: 900px) {
             text-align: left;
 
             h1 {
@@ -298,7 +314,7 @@ h2 {
         padding: 30px;
         display: none;
 
-        @media only screen and (min-width: 1000px) {
+        @media only screen and (min-width: 900px) {
             display: block;
         }
     }
@@ -307,7 +323,7 @@ h2 {
         width: 100%;
         padding: 30px;
 
-        @media only screen and (min-width: 1000px) {
+        @media only screen and (min-width: 900px) {
             display: none;
         }
         
@@ -334,7 +350,7 @@ h2 {
             
         }
 
-        @media only screen and (min-width: 1000px) {
+        @media only screen and (min-width: 900px) {
             display: none;
         }
     }
@@ -360,7 +376,7 @@ h2 {
             
         }
 
-        @media only screen and (min-width: 1000px) {
+        @media only screen and (min-width: 900px) {
             display: none;
         }
     }
@@ -369,6 +385,7 @@ h2 {
 .footer {
     color: lightgray;
     background-color: black;
+    height: 100%;
 
     ul {
         padding-top: 30px;
@@ -389,7 +406,7 @@ h2 {
         padding: 0 20px 20px 20px;
     }
 
-    @media only screen and (min-width: 1000px) {
+    @media only screen and (min-width: 900px) {
         h2 {
             padding: 30px 100px 0 100px;
         }
