--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,17 +1,11 @@
+@import url('http://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800,300');
+@import "compass/css3/box-shadow";
+
 html,
 body {
-    background-color: white;
-
-    @media only screen and (max-width: 950px) {
-        margin: 0px !important;
-    }
-}
-.left-arrow {
-    color: red;
-
-}
-.right-arrow {
-    color: red;
+    background-image: url("../img/navy_blue.png");
+    font-family: "Open Sans", sans-serif !important;
+    color: #f9f9f9;
 }
 
 * {
@@ -24,6 +18,7 @@ body {
     padding: 0;
 }
 
+
 h1 {
     font-size: 2em;
 }
@@ -32,27 +27,34 @@ h2 {
     font-size: 1.5em;
 }
 
+li {
+    color: black;
+}
+
 .navbar {
-    background-color: black;
-    border-color: black;
+    background-color: rgba(0,0,0,.5);
+    border-color: rgba(0,0,0,.5);
     margin-bottom: 0px;
     border-radius: 0px;
 
     .navbar-brand {
         color: lightgray;
-        font-size: 2em;
+        font-size: 3em;
+    }
+
+    .navbar-header {
+        padding-left: 30px;
     }
 
 }
 
 .container {
+    padding: 0 !important;
+    margin: 0 !important;
     width: 100%;
-    background-color: white;
-    padding: 0px 0px 20px 0px !important;
-    margin: 0px 0px 0px 0px !important;
 
     @media only screen and (min-width: 950px) {
-        padding: 0 0 100px 0 !important;
+        padding: 0 0 50px 0 !important;
         width: 950px;
         margin: 0 auto !important;
     }
@@ -60,8 +62,12 @@ h2 {
 
 button {
     border: 0;
-    background-color: white;
-    color: black;
+    background-color: transparent;
+    color: rgba(0,0,0,.5);
+
+    @media only screen and (min-width: 950px) {
+        width: 100px;
+    }
 }
 
 button:focus {
@@ -77,13 +83,17 @@ button:focus {
         display: inline-block;
         float: left;
         font-size: 4.5em;
-        padding-left: 10px;
+        width: 50px;
 
+        @media only screen and (min-width: 950px) {
+            width: 90px;
+        }
 
     }
 
     .candidate-info {
         display: inline-block;
+        width: 60%;
 
         h1 {
             font-weight: bold;
@@ -95,19 +105,23 @@ button:focus {
             margin-top: 0;
             font-weight: thin;
         }
+
+        @media only screen and (min-width: 950px) {
+            width: 750px;
+        }
+
     }
 
     .right-arrow {
         display: inline-block;
         float: right;
         font-size: 4.5em;
-        padding-right: 10px;
+        width: 50px;
 
-        button {
-            border: 0;
-            background-color: white;
-            color: black;
+        @media only screen and (min-width: 950px) {
+            width: 90px;
         }
+
     }
 }
 
@@ -142,11 +156,10 @@ button:focus {
 
 .desktop-left-section {
     height: 100%;
-    width: 100%;
 
     @media only screen and (min-width: 950px) {
         float: left;
-        width: 30%;
+        width: 250px;
     }
 
     .candidate-image {
@@ -159,7 +172,11 @@ button:focus {
         }
 
         img {
-            width: 30%;
+            width: 200px;
+            -webkit-box-shadow: 1px 0px 20px 5px rgba(0, 0, 0, 0.3);
+            -moz-box-shadow:    1px 0px 20px 5px rgba(0, 0, 0, 0.3);
+            box-shadow:         1px 0px 20px 5px rgba(0, 0, 0, 0.3);
+
         }
 
         @media only screen and (min-width: 950px) {
@@ -170,33 +187,61 @@ button:focus {
             }
 
             img {
-                width: 80%;
+                width: 200px;
+                border: 1px solid rgba(0,0,0,.5);
+
             }
         }
     }
 
     .candidate-committees {
         display: none;
-        margin-bottom: 20px;
+       
 
         @media only screen and (min-width: 950px) {
             float: left;
             width: 80%;
             display: block;
+            background-color: #bdbdbd;
+            border: 1px solid rgba(0,0,0,.5);
+            margin-bottom: 40px;
+            -webkit-box-shadow: 1px 0px 20px 5px rgba(0, 0, 0, 0.3);
+            -moz-box-shadow:    1px 0px 20px 5px rgba(0, 0, 0, 0.3);
+            box-shadow:         1px 0px 20px 5px rgba(0, 0, 0, 0.3);
+
+
 
             h1 {
-                background-color: white;
+                background-color: #7E7C7D;
+                margin: 0 0 !important;
+                padding: 20px 20px;
+                border-bottom: 1px solid rgba(0,0,0,.5);
+
             }
 
             ul {
-                padding-left: 15px;
+                padding: 0px 20px 0 20px;
                 font-size: 1.5em;
-                background-color: lightgray;
-                line-height: 2em;
+                line-height: 50px;
+                background-color: #bdbdbd;
+                margin-bottom: 0;
+
+
+
             }
 
             li {
                 list-style-type: none;
+                border-bottom: 1px solid rgba(0,0,0,.5);
+
+                &:first-child {
+                    padding-top: 0;
+                }
+
+                &:last-child {
+                    border-bottom: none;
+                }
+
             }
         }
     }
@@ -213,64 +258,69 @@ button:focus {
     }
 
     .bills-sponsored-section-desktop {
-        width: 100%;
         display: none;
 
         @media only screen and (min-width: 950px) {
             float: left;
             width: 80%;
             display: block;
+            background-color: #bdbdbd;
+            border: 1px solid rgba(0,0,0,.5);
+            margin-bottom: 40px;
+            -webkit-box-shadow: 1px 0px 20px 5px rgba(0, 0, 0, 0.3);
+            -moz-box-shadow:    1px 0px 20px 5px rgba(0, 0, 0, 0.3);
+            box-shadow:         1px 0px 20px 5px rgba(0, 0, 0, 0.3);
+
+
 
             h1 {
-                background-color: white;
+                background-color: #7E7C7D;
+                margin: 0 0 !important;
+                padding: 20px;
+                border-bottom: 1px solid rgba(0,0,0,.5);
+
             }
 
             ul {
-                padding-left: 0;
+                padding: 0px 20px 0 20px;
                 font-size: 1.5em;
-                background-color: lightgray;
-                line-height: 2em;
+                line-height: 50px;
+                background-color: #bdbdbd;
+                margin-bottom: 0;
+
+
+
             }
 
             li {
-                padding-left: 15px;
                 list-style-type: none;
-                border-top: 1px solid white;
+                border-bottom: 1px solid rgba(0,0,0,.5);
 
-                span {
-                    float: right;
-                    font-size: 1.5em;
-                    vertical-align: middle;
-                    line-height: 1.3em;
-                    padding-right: 15px;
+                &:first-child {
+                    padding-top: 0;
                 }
-            }
 
-            a {
-                text-decoration: none;
-                color: black;
-            }
-            
-            a:hover {
-
-                li {
-                    background-color: darkgray;
+                &:last-child {
+                    border-bottom: none;
                 }
+
             }
         }
     }
 
     .candidate-list-section-desktop {
-        width: 100%;
         display: none;
 
         @media only screen and (min-width: 950px) {
             float: left;
             width: 80%;
             display: block;
+            -webkit-box-shadow: 1px 0px 20px 5px rgba(0, 0, 0, 0.3);
+            -moz-box-shadow:    1px 0px 20px 5px rgba(0, 0, 0, 0.3);
+            box-shadow:         1px 0px 20px 5px rgba(0, 0, 0, 0.3);
 
             h1 {
-                background-color: white;
+                background-color: #bdbdbd;
             }
 
             ul {
@@ -283,7 +333,7 @@ button:focus {
             li {
                 padding-left: 15px;
                 list-style-type: none;
-                border-top: 1px solid white;
+                border-top: 1px solid #bdbdbd;
 
                 span {
                     float: right;
@@ -296,7 +346,7 @@ button:focus {
 
             a {
                 text-decoration: none;
-                color: black;
+                color: rgba(0,0,0,.5);
             }
             
             a:hover {
@@ -312,78 +362,88 @@ button:focus {
 
 .desktop-right-section {
     height: 100%;
-    width: 100%;
 
     @media only screen and (min-width: 950px) {
         display: inline-block;
-        width: 70%;
+        width: 700px;
     }
 
     .campaign-contributions-section {
         text-align: center;
-        background-color: lightgray;
+        background-color: #bdbdbd;
         width: 100%;
-        margin-bottom: 20px;
+        border: 1px solid rgba(0,0,0,.5);
         
         h1 {
-            padding-top: 20px;
+            padding: 20px;
+            background-color: #7E7C7D;
+            padding: 20px;
+            margin: 0;
+            border-bottom: 1px solid rgba(0,0,0,.5);
         }
 
         @media only screen and (min-width: 950px) {
             text-align: left;
-            
-            h1 {
-                background-color: white;
-                padding-top: 0;
-                padding-bottom: 10px;
-                margin-bottom: 0;
-
-            }
+            margin-bottom: 40px;
+            -webkit-box-shadow: 1px 0px 20px 5px rgba(0, 0, 0, 0.3);
+            -moz-box-shadow:    1px 0px 20px 5px rgba(0, 0, 0, 0.3);
+            box-shadow:         1px 0px 20px 5px rgba(0, 0, 0, 0.3);
         }
 
-        .contributions-graph {
-            background: url("http://i.stack.imgur.com/jj5Nf.png");
-            background-repeat: no-repeat;
-            background-size: 100% 100%;
-            min-height: 400px;
+        .contributions-graph-section {
+            height: 300px;
+
+            .line-chart {
+                width: 100%;
+                height: 300px;
+                margin: 0 auto;
+
+                @media only screen and (min-width: 950px) {
+                    width: 700px;
+                }
+            }
 
         }
     }
 
     .industry-influence-section {
         text-align: center;
-        width: 100%;
+        background-color: #bdbdbd;
 
         h1 {
-            padding-top: 20px;
+                background-color: #7E7C7D;
+                padding: 20px;
+                margin: 0;
+                border-bottom: 1px solid rgba(0,0,0,.5);
+
         }
 
         @media only screen and (min-width: 950px) {
             text-align: left;
-            background-color: lightgray;
+            border: 1px solid rgba(0,0,0,.5);
+            -webkit-box-shadow: 1px 0px 20px 5px rgba(0, 0, 0, 0.3);
+            -moz-box-shadow:    1px 0px 20px 5px rgba(0, 0, 0, 0.3);
+            box-shadow:         1px 0px 20px 5px rgba(0, 0, 0, 0.3);
 
-            h1 {
-                padding-top: 0;
-                background-color: white;
-                padding-bottom: 10px;
-                margin-bottom: 0;
-            }
         }
 
         .influence-graph-section {
             height: 300px;
 
             .pie-chart {
-                width: 400px;
+                width: 100%;
                 height: 300px;
                 margin: 0 auto;
+
+                @media only screen and (min-width: 950px) {
+                    width: 700px;
+                }
             }
         }
     }
 
     .bill-industry-influence-section {
         text-align: center;
-        width: 100%;
         background-color: lightgray;
 
         h1 {
@@ -394,7 +454,7 @@ button:focus {
             text-align: left;
 
             h1 {
-                background-color: white;
+                background-color: #bdbdbd;
                 padding-top: 0;
             }
         }
@@ -421,7 +481,6 @@ button:focus {
     }
 
     .bill-description-mobile {
-        width: 100%;
         padding: 30px;
 
         @media only screen and (min-width: 950px) {
@@ -431,25 +490,25 @@ button:focus {
     }
 
     .bills-sponsored-section-mobile {
-        background-color: lightgray;
-        width: 100%;
+        background-color: #bdbdbd;
+        border: 1px solid rgba(0,0,0,.5);
 
         h1 {
             text-align: center;
-            padding-top: 20px;
+            padding: 20px;
+            border-bottom: 1px solid rgba(0,0,0,.5);
         }
 
         ul {
-            padding-left: 0;
+            margin: 0 auto;
             font-size: 1.5em;
-            background-color: lightgray;
-            line-height: 3em;
+            background-color: #bdbdbd;
+            line-height: 80px;
         }
 
         li {
-            padding-left: 50px;
             list-style-type: none;
-            border-top: 1px solid white;
+            border-bottom: 1px solid rgba(0,0,0,.5);
 
             span {
                 float: right;
@@ -462,7 +521,7 @@ button:focus {
 
         a {
             text-decoration: none;
-            color: black;
+            color: rgba(0,0,0,.5);
         }
         
         a:hover {
@@ -479,7 +538,6 @@ button:focus {
 
     .candidate-list-section-mobile {
         background-color: lightgray;
-        width: 100%;
 
         h1 {
             text-align: center;
@@ -496,7 +554,7 @@ button:focus {
         li {
             padding-left: 50px;
             list-style-type: none;
-            border-top: 1px solid white;
+            border-top: 1px solid #bdbdbd;
 
             span {
                 float: right;
@@ -509,7 +567,7 @@ button:focus {
 
         a {
             text-decoration: none;
-            color: black;
+            color: rgba(0,0,0,.5);
         }
         
         a:hover {
@@ -530,24 +588,18 @@ button:focus {
 }
 
 .outside-container {
-    background-color: black;
+    background-color: rgba(0,0,0,.5);
     min-height: 100%;
 }
 
 .footer {
     color: lightgray;
-    background-color: black;
+    background-color: rgba(0,0,0,.5);
     height: 100%;
 
-    ul {
-        padding-top: 30px;
+    h1 {
         text-align: center;
-        font-size: 2em;
-    }
-
-    li {
-        display: inline;
-        list-style-type: none;
+        padding-top: 20px;
     }
 
     h2 {
