--- a/app/css/style.css
+++ b/app/css/style.css
@@ -638,24 +638,25 @@ path {
   text-align: center;
   padding-top: 20px;
   margin: 0;
-}
-/* line 645, ../../sass/style.scss */
-.footer-section h2 {
-  padding: 0 20px 0 20px;
-  text-align: center;
+  text-transform: uppercase;
+  letter-spacing: 3px;
+  color: #CCC;
+  margin-top: 20px;
 }
 /* line 650, ../../sass/style.scss */
-.footer-section p {
-  padding: 0 20px 20px 20px;
+.footer-section h2 {
+  padding: 30px 100px 0 100px;
+  text-align: center;
+  margin-bottom: 30px;
+  text-transform: uppercase;
+  letter-spacing: 3px;
+  font-size: 15px;
 }
-@media only screen and (min-width: 1200px) {
-  /* line 655, ../../sass/style.scss */
-  .footer-section h2 {
-    padding: 30px 100px 0 100px;
-    text-align: center;
-  }
-  /* line 660, ../../sass/style.scss */
-  .footer-section p {
-    padding: 0 100px 100px 100px;
-  }
+/* line 659, ../../sass/style.scss */
+.footer-section p {
+  padding: 0 100px 100px 100px;
+  color: #999;
+  max-width: 1100px;
+  margin: auto;
+  line-height: 27px;
 }
