--- a/sass/style.scss
+++ b/sass/style.scss
@@ -640,25 +640,28 @@ path {
         text-align: center;
         padding-top: 20px;
         margin: 0;
+        text-transform: uppercase;
+        letter-spacing: 3px;
+        color: #CCC;
+        margin-top: 20px;
+
     }
 
     h2 {
-        padding: 0 20px 0 20px;
+        padding: 30px 100px 0 100px;
         text-align: center;
+        margin-bottom: 30px;
+        text-transform: uppercase;
+        letter-spacing: 3px;
+        font-size: 15px;
     }
 
     p {
-        padding: 0 20px 20px 20px;
+        padding: 0 100px 100px 100px;
+        color: #999;
+        max-width: 1100px;
+        margin: auto;
+        line-height: 27px;
     }
 
-    @media only screen and (min-width: 1200px) {
-        h2 {
-            padding: 30px 100px 0 100px;
-            text-align: center;
-        }
-
-        p {
-            padding: 0 100px 100px 100px;
-        }
-    }
 }
